tests/bad_type_mismatch.hop
// Verifies bad type mismatch.
fn a(x i32) i32 {
	return true
}
